--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ demographic group. </p>
 
 	</div>
 
-<p class="caption"> For a live site, visit </p> 
+<p class="caption"> For a live site, visit floranwang</p> 
 
 
 	<!-- Latest compiled JavaScript -->
